[gd_scene load_steps=3 format=3 uid="uid://b6wodjxtl43lq"]

[ext_resource type="Script" path="res://demo_scene.gd" id="1_i0b31"]
[ext_resource type="PackedScene" uid="uid://b5w7d7mdw8bhk" path="res://health_bar/health_bar.tscn" id="1_p8qdw"]

[node name="DemoScene" type="Node2D"]
script = ExtResource("1_i0b31")

[node name="HealthBar" parent="." instance=ExtResource("1_p8qdw")]
position = Vector2(175, 64)

[node name="TestStuff" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 173.0
offset_top = 132.0
offset_right = 213.0
offset_bottom = 172.0

[node name="DamageButton" type="Button" parent="TestStuff"]
layout_mode = 0
offset_right = 136.0
offset_bottom = 31.0
text = "Take 10 Damage"

[node name="HealButton" type="Button" parent="TestStuff"]
layout_mode = 0
offset_left = 162.0
offset_top = 1.0
offset_right = 284.0
offset_bottom = 32.0
text = "Gain 10 Health"

[connection signal="pressed" from="TestStuff/DamageButton" to="." method="_on_damage_button_pressed"]
[connection signal="pressed" from="TestStuff/HealButton" to="." method="_on_heal_button_pressed"]
